--- a/CSS/tic-tac-toe-stylesheet.css
+++ b/CSS/tic-tac-toe-stylesheet.css
@@ -16,3 +16,9 @@ html {
     background: radial-gradient(circle, SkyBlue, SkyBlue 50%, LightCyan 50%, SkyBlue);
     background-size: 8px 8px;
 }
+
+.boardButton {
+    font-size: 4rem;
+    height: 100px;
+    width: 100px;
+}
