--- a/CSS/tic-tac-toe-stylesheet.css
+++ b/CSS/tic-tac-toe-stylesheet.css
@@ -1,15 +1,21 @@
+body {
+    background-color: black;
+    font-family: sans-serif;
+    color: #3adc3a;
+}
+
 td {
     border: 7px solid #3adc3a;
     height: 60px;
     width: 60px;
-    color: red;
     text-align: center;
     font-size: xxx-large;
-    font-family: sans-serif;
 }
+
 .no-border {
     border: none;
 }
+
 .no-horiz-border {
     border-top: none;
     border-bottom: none;
@@ -19,21 +25,29 @@ td {
     border-left: none;
     border-right: none;
 }
+
 table {
-    position: absolute;
-    left: 50%;
-    margin-left: -90px;
-    top: 10%;
-    z-index: 1;
+    margin-bottom: 5vh;
 }
 
 .main {
-    width: 100vw;
-    height: 100vh;
+    display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 30vw;
+    height: 50vh;
+    margin: 10vh auto;
 }
 
-body {
-    background-color:black;
+button {
+    background-color: transparent;
+    color: #3adc3a;
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: x-large;
+    border-color: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #176017;
 }
